# nextbike-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_availability_baseline_model.ipynb
reports/: availability_model_report.md
scripts/: generate_analysis_artifacts.py  generate_citybikes_deep_analysis.py
src/nextbike_analysis/: __init__.py  boundary.py  citybikes.py  cli.py  config.py  dashboard.py  datasets.py  db.py  formatting.py  gbfs.py  geo.py  modeling.py  poller.py  recommendations.py  reports.py  storage.py
