[project]
name = "nextbike-analysis"
version = "0.1.0"
description = "Local collection and analysis tooling for the Nextbike Brno GBFS feed."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pytz>=2026.2",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
nextbike = "nextbike_analysis.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

